# bare-metal-stopwatch-rust

./: Cargo.toml  README.md  STM32F439ZITX_FLASH.ld  memory.x  openocd.gdb
.cargo/: config.toml
src/: button.rs  display.rs  main.rs  stopwatch.rs
